Bug 830304 - Compute correct time zone offsets for Date methods. r=Waldo